# MathParser

./: CMakeLists.txt
includes/: Ast.h  Mparser.h  Parser.h  Scanner.c  Scanner.cpp  Scanner.h  vec.h
src/: Ast.c  Parser.c  Scanner.c  main.c  vec.c
